# onuxt-tauri-mobile

./: README.md  bun.lockb  nuxt.config.ts  package.json  pnpm-lock.yaml  unocss.config.ts
pages/: index.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
